# aoc2020

./: CMakeLists.txt  main.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main20.cpp  main21.cpp  main22.cpp  main23.cpp  main24.cpp  main25.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  template.cpp
